avance de estilos

--- a/style.css
+++ b/style.css
@@ -1,25 +1,56 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+:root {
+  --dark-blue: #0a3871;
+  --light-blue: #f3f5fc;
+  }
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
 .body{
-    background-color: #E5E5E5;
+    font-family: 'Inter', sans-serif;
+    background-color: var(--light-blue);
     margin: 30px;
+    color: var(--dark-blue);
     
 }
 .body .main .logo img{
     margin: 30px;
 }
 .body .main .messageBox{
-    width: 20%;
+    width: 25%;
     height: 560px;
     background-color: white;
-    border-radius:  15px;    
-    box-shadow: 0px 10px 13px -7px #292828, -4px -7px 8px 2px rgba(0,0,0,0.13);
+    border-radius:  30px;   
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
+}
+.body .main .messageBox .messageDesencriptar{
+    display: flex;    
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    text-align: center;
+    color: rgb(78, 77, 77);
+    font-weight: 900;
+    margin: 10px;
+    
+}
+.body .main .messageBox .messageDesencriptar p{
+  font-size: 14px;
+  margin-top: 10px;
+  color: grey;
+}
+.body .main .messageBox .messageDesencriptar img{
+    width: 80%;
+    
 }
 .body .main .message{
-    width: 80%;
+    width: 75%;
     height: 560px;
 }
 .body .main .messages{
@@ -29,4 +60,13 @@
     max-width: 1200px;
     margin: 10px 10px 10px 50px;
    
+}
+.body .main .messages .message .message-text{
+    font-size: 2rem;
+    margin: 100px 0px 0px 150px;
+    background-color: var(--light-blue);
+    border:none;
+    outline: none;
+    color: var(--dark-blue)
+
 }
